--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v2p0.dts
@@ -51,6 +51,21 @@
 	};
 };
 
+&i2c2 {
+	status = "okay";
+
+	hpu3501@1c {
+		hpu3501-rtc {
+			opsel = <0>;
+			// AON_RTC_ALARM_N_1V8 - AON_GPIO_PIN1
+			pinctrl-names = "default";
+			pinctrl-0 = <&aon_gpio_1>;
+			interrupt-parent = <&aon_gpio_porta>;
+			interrupts = <1 IRQ_TYPE_EDGE_RISING>;
+		};
+	};
+};
+
 /* SDIO */
 &sdio_1 {
 	status = "okay";
