drm: bridge: feat [X5-3142] Add BT1120 to HDMI Bridge MS7210
Signed-off-by: shaobin.ma <shaobin.ma@d-robotics.cc>
Change-Id: I004f969b3f7114e92bc261377a00cfdc585610fb

--- a/drivers/gpu/drm/bridge/Kconfig
+++ b/drivers/gpu/drm/bridge/Kconfig
@@ -413,4 +413,6 @@ source "drivers/gpu/drm/bridge/synopsys/Kconfig"
 
 source "drivers/gpu/drm/bridge/verisilicon/Kconfig"
 
+source "drivers/gpu/drm/bridge/macrosilicon/Kconfig"
+
 endmenu
