dts: x5-rdk: fix [X5-3122] Set mipi_host without mclk configuration
Summary:
    1. The 22-pin sensor and adapter board both include crystal oscillators, so the RDK series boards do not require mclk.
    2. Ensure that lpwm remains functional.

Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: I275d37dce0d4f50b517a10cb503e86102c3bd0db

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
@@ -622,15 +622,12 @@
 &lpwm1 {
 	status = "okay";
 	pinctrl-names = "default";
-	//pinctrl-0 = <&pinctrl_lpwm1_0 &pinctrl_lpwm1_1>;
+	pinctrl-0 = <&pinctrl_lpwm1_0 &pinctrl_lpwm1_1>;
 };
 
 &mipi_host0 {
 	status = "okay";
-	pinctrl-names = "enable", "disable";
-	pinctrl-0 = <&pinctrl_sensor0_mclk>; //mclk0
-	pinctrl-1 = <&pinctrl_lpwm1_0>;
-	snrclk-idx = <0>;  //mclk index
+	// in RDK X5, MCLK uses an external active crystal oscillator
 };
 
 &mipi_host1 {
@@ -640,10 +637,7 @@
 
 &mipi_host2 {
 	status = "okay";
-	pinctrl-names = "enable", "disable";
-	pinctrl-0 = <&pinctrl_sensor1_mclk>; //mclk1
-	pinctrl-1 = <&pinctrl_lpwm1_1>;
-	snrclk-idx = <1>;  //mclk index
+	// in RDK X5, MCLK uses an external active crystal oscillator
 };
 
 &mipi_host3 {
