--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_rt_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_rt_defconfig
@@ -20,6 +20,7 @@ CONFIG_LOG_BUF_SHIFT=16
 CONFIG_MEMCG=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CFS_BANDWIDTH=y
+CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_HUGETLB=y
