dts: hobot: feat [X5-3122] Set pinctrl_dsp_i2s1 to 3v3 for rdk boards 40pin
Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: I4ca6ce92195013aba3741ac4428ab5d881274d18

--- a/arch/arm64/boot/dts/hobot/pinmux-func.dtsi
+++ b/arch/arm64/boot/dts/hobot/pinmux-func.dtsi
@@ -76,6 +76,12 @@
 		drive-strength = <2>;
 	};
 
+	pconf_drv_pd_ds2_3v3: pconf-dev-pd-ds2-3v3 {
+		bias-pull-down;
+		power-source = <HORIZON_IO_PAD_VOLTAGE_3V3>;
+		drive-strength = <2>;
+	};
+
 	pconf_drv_pu_ds7_1v8: pconf-dev-pu-ds7-1v8 {
 		bias-pull-up;
 		power-source = <HORIZON_IO_PAD_VOLTAGE_1V8>;
