dts: hobot: fix [X5-3122] Set pinctrl_enet drive strength to strong for actual usage
Signed-off-by: xin03.liu <xin03.liu@d-robotics.cc>
Change-Id: Ic8a6d2f44871c73551765c936c52886ac2f43298

--- a/arch/arm64/boot/dts/hobot/pinmux-func.dtsi
+++ b/arch/arm64/boot/dts/hobot/pinmux-func.dtsi
@@ -28,6 +28,18 @@
 		drive-strength = <2>;
 	};
 
+	pconf_bias_disabled_ds3_1v8: pconf-bias-disabled-ds3-1v8 {
+		bias-disable;
+		power-source = <HORIZON_IO_PAD_VOLTAGE_1V8>;
+		drive-strength = <3>;
+	};
+
+	pconf_bias_disabled_ds6_1v8: pconf-bias-disabled-ds6-1v8 {
+		bias-disable;
+		power-source = <HORIZON_IO_PAD_VOLTAGE_1V8>;
+		drive-strength = <6>;
+	};
+
 	pconf_bias_disabled_ds7_1v8: pconf-bias-disabled-ds7-1v8 {
 		bias-disable;
 		power-source = <HORIZON_IO_PAD_VOLTAGE_1V8>;
