ready to insert OV9281 driver and build

--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -809,6 +809,7 @@ CONFIG_VIDEO_IMX219=m
 CONFIG_VIDEO_IMX477=m
 CONFIG_VIDEO_OV5640=m
 CONFIG_VIDEO_OV5647=m
+CONFIG_VIDEO_OV9281=m
 CONFIG_VIDEO_SC230AI=m
 # CONFIG_CXD2880_SPI_DRV is not set
 # CONFIG_MEDIA_TUNER_E4000 is not set
