--- a/drivers/media/i2c/Kconfig
+++ b/drivers/media/i2c/Kconfig
@@ -653,6 +653,20 @@ config VIDEO_OV8865
 	  To compile this driver as a module, choose M here: the
 	  module will be called ov8865.
 
+config VIDEO_OV9281
+    tristate "OmniVision OV9281 sensor support"
+    depends on OF_GPIO
+    depends on I2C && VIDEO_DEV
+    select VIDEO_V4L2_SUBDEV_API
+    select MEDIA_CONTROLLER
+    select V4L2_FWNODE
+    help
+      This is a Video4Linux2 sensor driver for the OmniVision
+      OV9281 camera sensor.
+
+      To compile this driver as a module, choose M here: the
+      module will be called ov9281.
+
 config VIDEO_OV9282
 	tristate "OmniVision OV9282 sensor support"
 	depends on OF_GPIO
