dts: hobot: feat [X5-3400] Add gpio_keys_hobot node for GPIO IRQ test
Summary:
- Add gpio_keys_hobot device node in x5-evb.dtsi
- This change supports the chip_base_test (12_gpio_irq_test)

Signed-off-by: pengjun.xie <pengjun.xie@d-robotics.cc>
Change-Id: I7aa0cc46d68d10cd00bc8089a391b7a8c5bcdcfb

--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -32,6 +32,13 @@
 		};
 	};
 
+	gpio_keys_hobot {
+		compatible = "hobot,gpio_key";
+		debounce-interval = <200>;
+		gpios = <&ls_gpio0_porta 12 GPIO_ACTIVE_LOW>;
+		pinctrl-names = "default";
+	};
+
 	gua_audio_rpc_wrapper:audio-rpc-wrapper {
 		compatible = "gua,audio-rpc-wrapper";
 		rpmsg-enable;
