feat(ddr): [X5-3367 X5-3364] Add 1866 and 2488 ddr frequency point
Signed-off-by: zhiwei01.li <zhiwei01.li@d-robotics.cc>
Change-Id: I7401b3078a21452d6263d1e01ea430b73913ef23

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -72,12 +72,20 @@
 			opp-hz = /bits/ 64 <1066000000>;
 		};
 
+		opp-1866M {
+			opp-hz = /bits/ 64 <1866000000>;
+		};
+
 		opp-2133M {
 			opp-hz = /bits/ 64 <2133000000>;
 		};
 
 		opp-3200M {
 			opp-hz = /bits/ 64 <3200000000>;
+		};
+
+		opp-2488M {
+				opp-hz = /bits/ 64 <2488000000>;
 		};
 
 		opp-2844M {
