dts: x5-memory.dtsi: feat Add ion memory size for RDK
Signed-off-by: xin03liu <xin03liu@d-robotics.cc>
Change-Id: I9b08c01ac0ad45aee824ff0fba5bc03d43fdea1f

--- a/arch/arm64/boot/dts/hobot/x5-memory.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-memory.dtsi
@@ -117,6 +117,27 @@
 			reg = <0x1 0x24100000 0x0 0x20000000>; /* 512MiB */
 			status = "disabled";
 		};
+		
+		ion_reserved_rdk: ion_reserved_rdk@A4100000 {
+			compatible = "ion-pool";
+			reg = <0x0 0xA4100000 0x0 0x14000000>; /* 320MiB */
+			status = "disabled";
+		};
+		
+		ion_carveout_rdk: ion_carveout_rdk@B8100000 {
+			compatible = "ion-carveout";
+			reg = <0x0 0xB8100000 0x0 0x14000000>; /* 320MiB */
+			status = "disabled";
+		};
+		
+		ion_cma_rdk: ion_cma_rdk@CC100000 {
+			compatible = "ion-cma";
+			alignment = <0x0 0x2000>;
+			reusable;
+			reg = <0x0 0xCC100000 0x0 0x08000000>; /* 128MiB */
+			status = "disabled";
+		};
+		
 		/* The remaining memory is used as kernel heaps,
 		 * please reserve with CAUTION!
 		 */
