dts: hobot: feat [X5-3393] Added rtc function for pmic 3501 in X5 EVB 1B
Summary:
- In 1_B board, the RTC alarm and wakup gpio are both connected to AON_GPIO_PIN2,
- so we don't suggest to use interrupt here, otherwise it will conflict with the wakeup gpio.
- This commit adds the complete device tree configuration while keeping the functionality disabled by default to prevent hardware conflicts.

Signed-off-by: xiangqing.shi <xiangqing.shi@horizon.cc>
Change-Id: I97b7ac2a14e65c48605d4855fcdf989ba948a665

--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-1_b.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-1_b.dts
@@ -42,3 +42,24 @@
 	power-gpios = <&hs_gpio0_porta 23 GPIO_ACTIVE_HIGH>;
 	toggle_interval_us = <100000>;
 };
+
+
+&i2c2 {
+	status = "okay";
+
+	hpu3501@1c {
+		hpu3501-rtc {
+			// In 1_B board, the RTC alarm and wakup gpio are both connected to AON_GPIO_PIN2,
+			// so we don't suggest to use interrupt here, otherwise it will conflict with the wakeup gpio.
+			// We don't suggest to use PMIC RTC function in evb 1_B.
+			// Default status is "disabled".
+			status = "disabled";
+			opsel = <0>;
+			// RTC_ALARM - AON_GPIO_PIN2
+			pinctrl-names = "default";
+			pinctrl-0 = <&aon_gpio_2>;
+			interrupt-parent = <&aon_gpio_porta>;
+			interrupts = <1 IRQ_TYPE_EDGE_RISING>;
+		};
+	};
+};
