iio: imu: inv_icm42600: add [RDK-892] ICM42688 support
- Add ICM42688 compatible string to driver
- Enable driver in defconfig
- Add device tree nodes for i2c4 and i2c6

Signed-off-by: fuhua.wang <fuhua.wang@d-robotics.cc>
Signed-off-by: xin03liu <xin03liu@d-robotics.cc>
Change-Id: I7f9238a635fb70aa96192bca55b592d9953046f3

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
@@ -311,6 +311,25 @@
 
 &i2c4 {
 	status = "okay";
+
+	invn_icm_i2c4: icm42688@68 {
+		compatible = "invensense,icm42688";
+		reg = <0x68>;
+		/*no interrupt pin*/
+		interrupt-parent = <&gic>;
+		interrupts = <GIC_SPI 109 IRQ_TYPE_LEVEL_HIGH>;
+		axis_map_x = <1>;
+		axis_map_y = <0>;
+		axis_map_z = <2>;
+		negate_x = <1>;
+		negate_y = <0>;
+		negate_z = <0>;
+		inven,secondary_type = "none";
+		inven,aux_type = "none";
+		inven,read_only_slave_type = "none";
+		drive-open-drain = <0>;
+		status = "disabled";
+	};
 };
 
 &i2c5 {
@@ -319,6 +338,25 @@
 
 &i2c6 {
 	status = "okay";
+
+	invn_icm_i2c6: icm42688@68 {
+		compatible = "invensense,icm42688";
+		reg = <0x68>;
+		/*no interrupt pin*/
+		interrupt-parent = <&gic>;
+		interrupts = <GIC_SPI 109 IRQ_TYPE_LEVEL_HIGH>;
+		axis_map_x = <1>;
+		axis_map_y = <0>;
+		axis_map_z = <2>;
+		negate_x = <1>;
+		negate_y = <0>;
+		negate_z = <0>;
+		inven,secondary_type = "none";
+		inven,aux_type = "none";
+		inven,read_only_slave_type = "none";
+		drive-open-drain = <0>;
+		status = "disabled";
+	};
 };
 
 &i2c7 {
