--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -1317,6 +1317,7 @@ CONFIG_HID_SENSOR_GYRO_3D=y
 CONFIG_DHT11=m
 CONFIG_HDC100X=m
 CONFIG_HTU21=m
+CONFIG_INV_ICM42600_I2C=m
 CONFIG_MAXIM_THERMOCOUPLE=m
 CONFIG_PWM=y
 CONFIG_PWM_DROBOT=y
