--- a/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
@@ -218,6 +218,25 @@
 	status = "okay";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c4>;
+
+	invn_icm_i2c4: icm42688@68 {
+		compatible = "invensense,icm42688";
+		reg = <0x68>;
+		/*no interrupt pin*/
+		interrupt-parent = <&gic>;
+		interrupts = <GIC_SPI 109 IRQ_TYPE_LEVEL_HIGH>;
+		axis_map_x = <1>;
+		axis_map_y = <0>;
+		axis_map_z = <2>;
+		negate_x = <1>;
+		negate_y = <0>;
+		negate_z = <0>;
+		inven,secondary_type = "none";
+		inven,aux_type = "none";
+		inven,read_only_slave_type = "none";
+		drive-open-drain = <0>;
+		status = "disabled";
+	};
 };
 
 &i2c5 {
@@ -245,6 +264,25 @@
 	status = "okay";
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c6>;
+
+	invn_icm_i2c6: icm42688@68 {
+		compatible = "invensense,icm42688";
+		reg = <0x68>;
+		/*no interrupt pin*/
+		interrupt-parent = <&gic>;
+		interrupts = <GIC_SPI 109 IRQ_TYPE_LEVEL_HIGH>;
+		axis_map_x = <1>;
+		axis_map_y = <0>;
+		axis_map_z = <2>;
+		negate_x = <1>;
+		negate_y = <0>;
+		negate_z = <0>;
+		inven,secondary_type = "none";
+		inven,aux_type = "none";
+		inven,read_only_slave_type = "none";
+		drive-open-drain = <0>;
+		status = "disabled";
+	};
 };
 
 &i2c7 {
