mmc: dwcmshc: fix [RDK-974] Enable cap-mmc-hw-reset to ensure stable init for some SD cards
Summary:
Enable the 'cap-mmc-hw-reset' property to support hardware reset during
SD card reinitialization. This improves initialization stability and
ensures Hikvision or movespeed SD cards can successfully boot after
repeated init sequences, maintaining normal system startup speed.

Signed-off-by: xin03liu <xin03liu@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-rdk.dtsi
@@ -458,6 +458,7 @@
 &sdio_0 {
 	status = "okay";
 	cd-inverted;
+	cap-mmc-hw-reset;
 
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sd &hsio_gpio0_26 &hsio_gpio1_1>;
