dts: hobot: fix [RDK-964]: Replace “UNKNOWN” with “X5U” for compatibility
Signed-off-by: xin03liu <xin03liu@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -781,7 +781,7 @@
 		socinfo: socinfo{
 			compatible = "hobot,boardinfo";
 			soc_gen = "X5";
-			soc_name = "UKNOWN";
+			soc_name = "X5U";
 			hw_name = "0000000000000000"; /* 16Btyes */
 			board_version = "0000000000000000"; /* 16Btyes */
 			hw_info = "00000000000000000000000000000000";  /* 32Btyes */
