dts: hobot: fix [RDK-925]: Release GPIO pins for sysfs access
Signed-off-by: xin03liu <xin03liu@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3623,11 +3623,8 @@
 				status = "disabled";
 				resets = <&dsprst DSP_I2C_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default","recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_dsp_i2c7>;
-				pinctrl-1 = <&dsp_gpio0_0 &dsp_gpio0_1>;
-				scl-gpios = <&dsp_gpio_porta 0 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&dsp_gpio_porta 1 GPIO_ACTIVE_HIGH>;
 			};
 
 			dsp_axi_dma: dma-controller@32080000 {
@@ -4154,11 +4151,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C0_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c0>;
-				pinctrl-1 = <&lsio_gpio1_7 &lsio_gpio1_8>;
-				scl-gpios = <&ls_gpio1_porta 7 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio1_porta 8 GPIO_ACTIVE_HIGH>;
 			};
 
 			i2c1: i2c@340c0000 {
@@ -4174,11 +4168,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C1_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c1>;
-				pinctrl-1 = <&lsio_gpio1_9 &lsio_gpio1_10>;
-				scl-gpios = <&ls_gpio1_porta 9 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio1_porta 10 GPIO_ACTIVE_HIGH>;
 			};
 
 			i2c2: i2c@340d0000 {
@@ -4194,11 +4185,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C2_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c2>;
-				pinctrl-1 = <&lsio_gpio1_11 &lsio_gpio1_12>;
-				scl-gpios = <&ls_gpio1_porta 11 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio1_porta 12 GPIO_ACTIVE_HIGH>;
 			};
 
 			i2c3: i2c@340e0000 {
@@ -4214,11 +4202,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C3_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c3>;
-				pinctrl-1 = <&lsio_gpio1_13 &lsio_gpio1_14>;
-				scl-gpios = <&ls_gpio1_porta 13 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio1_porta 14 GPIO_ACTIVE_HIGH>;
 			};
 
 			i2c4: i2c@340f0000 {
@@ -4234,11 +4219,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C4_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c4>;
-				pinctrl-1 = <&lsio_gpio1_15 &lsio_gpio1_16>;
-				scl-gpios = <&ls_gpio1_porta 15 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio1_porta 16 GPIO_ACTIVE_HIGH>;
 			};
 
 			lpwm0: lpwm@34100000 {
@@ -4491,11 +4473,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C5_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c5>;
-				pinctrl-1 = <&lsio_gpio0_10 &lsio_gpio0_11>;
-				scl-gpios = <&ls_gpio0_porta 10 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio0_porta 11 GPIO_ACTIVE_HIGH>;
 			};
 
 			i2c6: i2c@341d0000 {
@@ -4511,11 +4490,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C6_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
-				pinctrl-names = "default", "recovery";
+				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_i2c6>;
-				pinctrl-1 = <&lsio_gpio0_30 &lsio_gpio0_31>;
-				scl-gpios = <&ls_gpio0_porta 30 GPIO_ACTIVE_HIGH>;
-				sda-gpios = <&ls_gpio0_porta 31 GPIO_ACTIVE_HIGH>;
 			};
 		};
 
