dts: hobot: fix : Correct the model name in device tree
Signed-off-by: xin03liu <xin03liu@d-robotics.cc>

--- a/arch/arm64/boot/dts/hobot/x5-md-v0p2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-md-v0p2.dts
@@ -10,7 +10,7 @@
 #include "x5-rdk.dtsi"
 
 / {
-	model = "D-Robotics X5 ND V0.1";
+	model = "D-Robotics X5 MD V0.2";
 
 	leds {
 		status = "okay";
